--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 
 .table {
     border: 1px solid black;
+    border-radius: 10px;
     border-collapse: collapse;
     margin: auto;
 
@@ -19,10 +20,43 @@ body {
 td,
 colgroup {
     border: 1px solid black;
-    padding: 15px;
+    padding: 15px 30px;
+}
+/* 
+th {
+    /* padding: 30px; */
+    height: 40px;
+
+    border: 1px solid black;
+} */
+
+.key--equal {
+    background-color: tomato;
 }
 
-th {
-    padding: 20px;
-    border: 1px solid black;
+.key--operator {
+    background: hsl(10, 50%, 96%);
+}
+
+.key--operator-pressed {
+    background: hsl(10, 50%, 90%);
+}
+
+.display {
+    font-size: 18px;
+    text-align: right;
+    height: 70px;
+
+}
+
+.previous-operand {
+    font-size: 14px;
+    color: #3c3c3c;
+    margin-bottom: 10px;
+    margin-right: 15px;
+    display: block;
+}
+.current-operand {
+    margin-right: 15px;
+
 }
